# Weather-Dashboard-Open-Meteo-API

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  USAGE.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml  pages.yml  quality.yml  refresh.yml
docs/: index.html
docs/assets/: app.js  dashboard.js  style.css
docs/data/: daily.csv  hourly.csv  latest.json  metrics.json
docs/how-to/: add-threshold.md
docs/meta/: build.json
docs/reference/: api-variables.md
src/weather_dashboard/: __init__.py  __main__.py  config.py
src/weather_dashboard/api/: __init__.py  client.py  endpoints.py  models.py
src/weather_dashboard/bootstrap/: __init__.py  boot.py  context.py  ledger.py  logging_std.py  meta.py  schema.py  settings.py
src/weather_dashboard/calc/: __init__.py  metrics.py  normalizer.py  thresholds.py  windows.py
src/weather_dashboard/meteo/: __init__.py  geocoding.py  open_meteo.py
src/weather_dashboard/processing/: __init__.py  aggregations.py  indices.py  validators.py
src/weather_dashboard/render/: __init__.py  data_writer.py  render_html.py
src/weather_dashboard/render/templates/: index.html.j2
src/weather_dashboard/rendering/: __init__.py  generator.py
src/weather_dashboard/rendering/templates/: about.html.j2  index.html.j2
src/weather_dashboard/rendering/templates/components/: footer.html.j2  meta.html.j2
tests/: __init__.py  conftest.py
tests/integration/: test_client.py
tests/unit/: __init__.py  test_aggregations.py  test_boot.py  test_data_writer.py  test_geocoding.py  test_gost_headers.py  test_indices.py  test_ledger_schema.py  test_metrics.py  test_normalizer.py  test_open_meteo.py  test_render_html.py  test_settings.py  test_thresholds.py  test_validators.py  test_windows.py
