# =============================================================
# ПУТЬ        : pyproject.toml
# ОБОЗНАЧЕНИЕ : WD.CONF.01
# НАИМЕНОВАНИЕ: Формуляр уровня 1 — метаданные и конфигурация
# ДОКУМЕНТ    : КС-СТО-1.04.СК
# ПРОГРАММА   : Weather Dashboard
# =============================================================

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

# -------------------------------------------------------------
# Раздел 1. Метаданные пакета (SSOT)
# -------------------------------------------------------------

[project]
name            = "weather-dashboard"
version         = "0.1.0"
description     = "Статический дашборд прогноза погоды на основе Open-Meteo API"
readme          = "README.md"
requires-python = ">=3.11"
license         = { text = "MIT" }

dependencies = [
    "httpx>=0.27",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-cov>=5.0",
]

# -------------------------------------------------------------
# Раздел 2. Пути исходников
# -------------------------------------------------------------

[tool.hatch.build.targets.wheel]
packages = ["src/weather_dashboard"]

# -------------------------------------------------------------
# Раздел 3. Ruff — форматирование и линтинг
# -------------------------------------------------------------

[tool.ruff]
target-version = "py311"
line-length    = 88
src            = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "ANN", # flake8-annotations (публичные функции)
    "RUF", # ruff-specific
]
ignore = [
    "ANN101", # self не аннотируем
    "ANN102", # cls не аннотируем
    "ANN204", # __init__ не требует return type
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S101"]
"tests/unit/test_settings.py" = ["ANN", "S101", "E501"]

[tool.ruff.format]
quote-style              = "double"
indent-style             = "space"
skip-magic-trailing-comma = false

# -------------------------------------------------------------
# Раздел 4. Pytest
# -------------------------------------------------------------

[tool.pytest.ini_options]
testpaths   = ["tests"]
addopts     = """
  -v
  --tb=short
  --cov=src/weather_dashboard
  --cov-report=term-missing
  --cov-fail-under=60
"""
markers = [
    "unit: модульные тесты (изолированные)",
    "smoke: дымовые тесты (сквозной запуск)",
]

# -------------------------------------------------------------
# Раздел 5. Mypy
# -------------------------------------------------------------

[tool.mypy]
python_version    = "3.11"
strict            = true
ignore_missing_imports = true