[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weather-dashboard-open-meteo-api"
version = "1.0.0"
description = "Weather Dashboard with Open-Meteo API — Loliconus portfolio"
authors = [{ name = "Loliconus" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.14"
keywords = ["weather", "open-meteo", "dashboard", "api", "portfolio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "httpx>=0.28",
    "jinja2>=3.1",
    "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "hypothesis>=6.115",
    "respx>=0.21",
    "ruff>=0.9",
    "ty>=0.0.1a1",
    "pre-commit>=4.0",
]

[project.urls]
Repository = "https://github.com/Loliconus/Weather-Dashboard-Open-Meteo-API"
"Bug Tracker" = "https://github.com/Loliconus/Weather-Dashboard-Open-Meteo-API/issues"
Changelog = "https://github.com/Loliconus/Weather-Dashboard-Open-Meteo-API/blob/main/CHANGELOG.md"

# ---------------------------------------------------------------------------
# hatchling: src-layout
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/weather_dashboard"]

# ---------------------------------------------------------------------------
# ruff — lint + format (SSOT)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "S",   # flake8-bandit (security)
    "B",   # flake8-bugbear
    "RUF", # ruff-specific
]
ignore = [
    "ANN101",  # missing type annotation for `self`
    "ANN102",  # missing type annotation for `cls`
    "S101",    # use of assert (допустимо в тестах)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN", "S311"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# ty — type checker
# ---------------------------------------------------------------------------
[tool.ty.environment]
python-version = "3.14"

[tool.ty.rules]
unresolved-import = "error"
possibly-missing-import = "error"

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
]

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "src/weather_dashboard/rendering/templates/*",
    "src/weather_dashboard/rendering/generator.py",
    "*/__init__.py",
]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
show_missing = true